Fix confetti overflow

--- a/src/components/roadmap/styles.module.css
+++ b/src/components/roadmap/styles.module.css
@@ -31,16 +31,12 @@
     gap: 30px;
 }
 
-.roadmapMobile{
+.roadmapMobile, .animatedContentText{
     font-size: 2rem;
 }
 
 .animatedContent{
     font-size: 5rem;
-}
-
-.animatedContentText{
-    font-size: 2rem;
 }
 
 .roadmapEnd{
@@ -52,7 +48,7 @@
     top: -3rem;
     left: 15px;
     height: 10px;
-    width: 90vw;
+    width: 75vw;
     background-color: rgb(0, 0, 0);
 }
 
